# DesktopBoxLite

./: .gitignore  AGENTS.md  CHANGELOG.md  DesktopBoxLite项目需求文档.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: 01-PM-执行计划.md  02-TD-技术设计.md  03-BIZQA-业务审查报告.md  04-CODEQA-代码审查报告.md  05-PM-需求重审.md  06-TD-技术调整方案.md  07-BIZQA-业务复审报告.md  08-CODEQA-代码复审报告.md  09-TD-规范核对报告.md  10-PM-需求二次重审.md  11-TD-技术修复方案.md  12-TD-性能分析报告.md  13-TD-优化实施方案.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  desktop.rs  executor.rs  hotkey.rs  icon_cache.rs  icon_state.rs  icons.rs  lib.rs  logging.rs  main.rs  tray.rs
src/components/: App.ts  IconGrid.ts  IconItem.ts  ResizeHandle.ts  SearchBar.ts
src/styles/: default.css
src/utils/: icons.ts  poll_manager.ts  types.ts
