[package]
name = "desktopbox-lite"
version = "1.0.1"
description = "A lightweight desktop icon organizer tool"
authors = ["DesktopBox Team"]
edition = "2021"

[lib]
name = "desktopbox_lite_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "desktopbox-lite"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opener = "0.7"
log = { version = "0.4", features = ["std"] }
chrono = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
